--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,17 +1,24 @@
 .div {
-			padding: 0.8em;
-			font-family: corbel;
-			font-size: 14px;
-			border:1px solid #999;
-			border-radius: 5px;
-			width: 70%;
-		}
+	padding: 0.8em;
+	font-family: corbel;
+	font-size: 14px;
+	border:1px solid #999;
+	border-radius: 5px;
+	width: 70%;
+}
 
-		.div-table {
-			padding: 0.3em;
-			font-family: corbel;
-			font-size: 14px;
-			border:1px solid #999;
-			border-radius: 5px;
-			width: 40%;
-		}
+.div-table {
+	padding: 0.3em;
+	font-family: corbel;
+	font-size: 14px;
+	border:1px solid #999;
+	border-radius: 5px;
+	width: 40%;
+}
+
+
+.code {
+	padding: 0.3em;
+	font-family: corbel;
+	font-size: 10px;
+}
